--- a/User.html
+++ b/User.html
@@ -1,4 +1,3 @@
 <p>User Hpome Page</p>
-<p>Button Feature Added Clickable</p>
-<p>Jenkins Feature Added !Q</p>
+<p>Radio Feature Added Seledtable thing</p>
 
