--- a/User.html
+++ b/User.html
@@ -1,2 +1,3 @@
 <p>User Hpome Page</p>
-<p>Radio Feature Added Seledtable thing // Rebase try</p>
+<p>Radio Feature Added Seledtable thing </p>
+<p>Stash 1 </p>
