--- a/User.html
+++ b/User.html
@@ -1,4 +1,2 @@
 <p>User Hpome Page</p>
-<p>Radio Feature Added Seledtable thing </p>
-<p>Stash 1 </p>
-<p>Stash 2 </p>
+<p>Radio Feature Added Seledtable thing // Rebase try</p>
